# emv-card-sim

./: .gitignore  CARD_PROGRAMMING.md  COLOSSUS.md  DEPLOYMENT.md  Dockerfile  GET_LOGS.md  README.md  READ_ZEROES_VERIFONE.md  afl-sfi-validator.sh  build.gradle  clone-profile.sh  deploy-and-personalize.sh  diagnose-card-data.sh  full-repersonalize.sh  generate-capk.sh  generate-icc-cert.sh  generate-issuer-cert.sh  generate-pan.sh  personalize-colossus-card.sh  personalize-colossus-cda.sh  personalize-paymentapp-fixed.sh  personalize-paymentapp-t1-test4444.sh  personalize-paymentapp-t1.sh  personalize-paymentapp.sh  personalize-pse-t1.sh  personalize-pse.sh  personalize-single-command.sh  personalize-single.sh  personalize-visa-test.sh  personalize.sh  program-card-from-yaml.sh  read-visa-card.py  repersonalize-rsa2048.sh  repersonalize-with-real-certs.sh  run-colossus-tests.sh  validate-card.sh  validate-paymentapp.sh  validate-pse.sh  validate_cert.py  verify-card-data.sh  (+2 more)
personalize/: .gitignore  personalize.py  pyproject.toml  read_records.py
personalize-tool/: personalize.py  pyproject.toml
personalize-tool/emv_personalize/: apdu.py  card.py  crypto.py  tags.py
personalize-tool/profiles/: default.yaml  mastercard-test.yaml
personalize-tool/tests/: test_card.py
personalize/emv_personalize/: __init__.py  apdu.py  card.py  crypto.py  luhn.py  tags.py  tlv.py
personalize/emv_personalize.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
personalize/profiles/: default.yaml  mastercard-test.yaml
personalize/tests/: test_apdu.py  (+5 more)
(+98 files in other folders)
