[package]
name = "simulator"
version = "0.1.0"
authors = ["Mika Rautio"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For local development, use path:
# emvpt = { path = "../../../../path/to/emvpt/emvpt" }
# For CI, use git:
emvpt = { git = "https://github.com/colossus-credit/emvpt", branch = "feat/mc-contactless-kernel" }
jni = "0.19.0"
log = "0.4.22"
log4rs = "1.3.0"
hex = "0.4.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.8.26"

[lib]
crate_type = ["cdylib"]
